removed double scroll bar -> single scroll should avoid error in mac as well

--- a/webui/css/bridge.css
+++ b/webui/css/bridge.css
@@ -251,7 +251,7 @@ img {
     background-repeat: repeat;
     z-index: 10;
     position: absolute;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 .centeredContent {
